Workshop07-cf-conditions/sg.yml
---
AWSTemplateFormatVersion: 2010-09-09
Description: A Security Group
Parameters:
  Env:
    Type: String
  IngressCidrList:
    Type: List<String>
    Default: "10.0.0.0/8,empty,empty"
Conditions:
  Cidr0Exists: !Not [!Equals [!Select [0, !Ref 'IngressCidrList'], empty]]
  Cidr1Exists: !Not [!Equals [!Select [1, !Ref 'IngressCidrList'], empty]]
  Cidr2Exists: !Not [!Equals [!Select [2, !Ref 'IngressCidrList'], empty]]
Resources:
  SecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: !Sub '${Env}-dyn-test-sg'
      GroupDescription: Security Group for test purpose
      VpcId:
        Fn::ImportValue: !Sub '${Env}-vpc-id'
      SecurityGroupIngress:
        - Fn::If:
            - 'Cidr0Exists'
            - IpProtocol: tcp
              FromPort: 80
              ToPort: 80
              CidrIp: !Select [0, !Ref 'IngressCidrList']
            - !Ref 'AWS::NoValue'
        - Fn::If:
            - 'Cidr1Exists'
            - IpProtocol: tcp
              FromPort: 80
              ToPort: 80
              CidrIp: !Select [1, !Ref 'IngressCidrList']
            - !Ref 'AWS::NoValue'
        - Fn::If:
            - 'Cidr2Exists'
            - IpProtocol: tcp
              FromPort: 80
              ToPort: 80
              CidrIp: !Select [2, !Ref 'IngressCidrList']
            - !Ref 'AWS::NoValue'
      SecurityGroupEgress:
        - IpProtocol: -1
          FromPort: 0
          ToPort: 0
          CidrIp: 0.0.0.0/0
      Tags:
        - Key: Name
          Value: !Sub '${Env}-dyn-test-sg'
